--- a/react脚手架/react-jiaoshoujia/package.json
+++ b/react脚手架/react-jiaoshoujia/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router": "5.2.0",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
