--- a/react脚手架/react-jiaoshoujia/package.json
+++ b/react脚手架/react-jiaoshoujia/package.json
@@ -9,10 +9,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "antd": "^4.23.0",
-    "axios": "^0.27.2",
-    "classnames": "^2.3.1",
-    "moment": "^2.29.4",
+    "immer": "^10.0.2",
+    "mobx-react": "^7.6.0",
+    "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -20,12 +19,12 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
-    "redux": "^4.2.1",
-    "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
+    "recoil": "^0.7.7",
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.3.8"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "start",
     "build": "build",
     "test": "test",
     "eject": "react-scripts eject"
