--- a/react脚手架/react-jiaoshoujia/package.json
+++ b/react脚手架/react-jiaoshoujia/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "immer": "^10.0.2",
+    "mobx": "^6.9.0",
     "mobx-react": "^7.6.0",
     "mobx-react-lite": "^3.4.3",
     "react": "^18.2.0",
